fixed problem in price. Added  white-space: nowrap for price__price

--- a/css/modules/price/price.css
+++ b/css/modules/price/price.css
@@ -121,6 +121,10 @@
   width: 712px;
 }
 
+.price__price {
+  white-space: nowrap;
+}
+
 .price__text {
   font-size: 16px;
   line-height: 130%;
